--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
     </dependencies>
 
     <build>
+        <finalName>dikann-web-service</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
